05 September 2007

* Don't purge if no mails have been dropped.

03 September 2007

* Options to fetch only new or old mail from POP3 or IMAP accounts. Based on
  request to mailing list, and ensuing discussion, from patnel972-fdm at 
  yahoo.fr.

  This introduces two new keywords for accounts: new-only and old-only. For
  POP3 accounts, a cache file must also be specified (similar to NNTP); this
  holds the list of UIDs for all the mail present in the account on the last
  fetch. For IMAP, the server-managed \Seen flag is used. Servers should set
  this flag once a mail has been read (downloaded). The \Recent flag isn't 
  used because it is unset when any client is told about the mail - even a 
  poll is enough.

  Examples of syntax are:

	account pop3 server ... new-only cache "~/my/pop3.cache.file"
	
	account imap server ... old-only
 
  This is useful for people who like to keep mail on the server to be read
  using a web interface or suchlike. Note that it is up to the user to make
  sure their account doesn't get full! fdm does not check this or have any
  abilities to delete or manage mail that isn't fetched.

02 September 2007

* More changes to io.c/command.c to fix issues on Linux introduced by fixes to
  IMAP-over-pipe. Hopefully all working now.

31 August 2007

* Rewrote user header searching and address matching to clean up the code and
  work with multiple headers, also fix some fnmatch problems.

30 August 2007

* Fixed silly bug in replace.c. Using the base rather than data offset for %0-%9
  so they pointed at the wrong data if a from line had been trimmed. Found by
  Jo Fahlke, reported via Frank Terbeck through a Debian bug report.
* Move command-line macro parsing into parse.y/parse-fn.c and make it actually
  work again. Found by Jo Fahlke, reported via Frank Terbeck.
* account and all tokens are now normal match conditions. So, you can do useless
  stuff like:

	match all and all or all ...
