@@ -1,3 +1,7 @@
+17 September 2007
+
+* Quote IMAP folder name to allow spaces and so on. SF bug 1791056.
+
 05 September 2007
 
 * Don't purge if no mails have been dropped.
@@ -642,4 +646,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.159 2007-09-05 08:45:49 nicm Exp $
+$Id: CHANGES,v 1.160 2007-09-17 07:21:13 nicm Exp $
